features/metaboxes/scss/style.scss
/* ... */
.wp-picker-active {
	display: flex;
	flex-wrap: wrap;

	.wp-color-result:after {
		content: none;
	}
}

.wp-picker-open + .wp-picker-input-wrap {
	display: flex;
	align-items: stretch;

	.button {
		height: auto;
		padding-left: 10px;
		padding-right: 10px;
	}
}

.wp-picker-container input[type=text].wp-color-picker {
	width: 85px;
	text-align: left;
}

.media-modal-close {
	text-decoration: none;

	span.media-modal-icon {
		position: absolute;
		top: 50%;
		left: 50%;
		transform: translateX(-50%) translateY(-50%);
	}
}

.media-frame-title h1 {
	padding-left: 0;
}


.tooltipster-base {
	border-color: #23282d;
	.tooltipster-content {
	    padding: 20px;

	    font-style: normal;
	    color: inherit;
	    background-color: #23282d;
	    text-align: left;
	    color: #FFF;
	    box-shadow: 0 4px 20px rgba(0,0,0,.20),0 0 0 1px rgba(0,0,0,.06);

	    a {
	    	color: white;
		    text-decoration: none;
		    border-bottom: 1px dotted;

		    &:hover {
		    	opacity: 0.7;
		    }
	    }

	    p {
	    	margin: 0 0 1em 0;

	    	&:last-child {
	    		margin-bottom: 0;
	    	}
	    }

	    title {
    	    display: block;
		    font-weight: bold;
		    margin-bottom: 12px;
		    font-size: 14px;
		    margin-top: -4px;
	    }
	}

	.tooltipster-arrow {
		z-index: 1;
	    height: auto;
	    width: auto;
	    top: auto;
	    right: auto;
	    left: calc(50% - 5px);
	    bottom: 0;

		span {
			border-top-color: #23282d !important;
		}
	}
}

.tooltipster-icon {
	color: #AAA;
}

